continuacao pagina gamer

--- a/css/style.css
+++ b/css/style.css
@@ -28,3 +28,94 @@
 
 
 }
+
+body {
+
+    background-color: black;
+    color:white;
+
+
+}
+
+
+/*classes genericas */
+
+.layout-grid {
+border: 1px solid salmon;
+width: 90%;
+height: 100%;
+margin: 0 auto;
+
+}
+
+
+/* mobile first*/
+
+
+/* HEADER*/
+
+
+header{
+    height: 60px;
+    background: black ;
+
+} 
+
+
+header.header-top {
+display: none;
+
+}
+
+/*HEADER BOTTOM*/
+
+/*justify content */
+.alinhamento-between-center {
+
+display: flex;
+justify-content: space-between;
+align-items: center;
+
+}
+
+header .header-bottom {
+
+height: 100%;
+
+}
+
+
+header .header-bottom img.logo{
+    width: 86px;
+
+
+}
+
+header .header-bottom nav {
+position: fixed;
+top: 60px;
+left: 0;
+width: 80vw;
+height: calc(100vh - 60px);
+
+
+
+display: ;
+flex-direction: column;
+background-color: grey;
+border: 1px solid white;
+
+
+
+
+
+
+
+}
+
+
+header .header-bottom .menu-usuarios {
+
+display: none;
+    
+}
