--- a/css/style.css
+++ b/css/style.css
@@ -1,121 +1,113 @@
+/* imports das fontes */
 
+/* TITILLIUM WEB */
 @font-face {
-    font-family:TitilliumWeb-Black ;
+    font-family: TitilliumWeb-Black;
     src: url(../assets/fonts/Titillium_Web/TitilliumWeb-Black.ttf);
 }
 
-
-
+/* INTER */
 @font-face {
-    font-family:Quicksand ;
-    src: url(../assets/fonts/Quicksand/Quicksand-VariableFont_wght.ttf);
-}
-
-
-@font-face {
-    font-family:Inter ;
+    font-family: Inter;
     src: url(../assets/fonts/Inter/Inter-VariableFont_slnt\,wght.ttf);
 }
 
-
-
-
-*{
-
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
-
 }
 
 body {
-
-    background-color: black;
-    color:white;
-
-
+    color: #ffffff;
 }
 
-
-/*classes genericas */
-
+/* Classes genéricas */
 .layout-grid {
-border: 1px solid salmon;
-width: 90%;
-height: 100%;
-margin: 0 auto;
-
+  
+    width: 90%;
+    height: 100%;
+    margin: 0 auto;
 }
 
-
-/* mobile first*/
-
-
-/* HEADER*/
-
-
-header{
-    height: 60px;
-    background: black ;
-
-} 
-
-
-header.header-top {
-display: none;
-
-}
-
-/*HEADER BOTTOM*/
-
-/*justify content */
+/* justify content + align items */
 .alinhamento-between-center {
-
-display: flex;
-justify-content: space-between;
-align-items: center;
-
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
+
+/* Mobile First */
+
+/* HEADER */
+header {
+    position: fixed;
+    top: 0;
+    z-index: 20;
+    width: 100vw;
+    height: 60px;
+    background-color: #1B1426;
+}
+
+/* Header Top */
+header .header-top {
+    display: none;
+}
+
+/* Header Bottom */
+
 
 header .header-bottom {
-
-height: 100%;
-
+    height: 100%;
 }
 
-
-header .header-bottom img.logo{
+header .header-bottom img.logo {
     width: 86px;
-
-
 }
 
 header .header-bottom nav {
-position: fixed;
-top: 60px;
-left: 0;
-width: 80vw;
-height: calc(100vh - 60px);
+    position: fixed;
+    top: 60px;
+    left: -80vw;
+    width: 80vw;
+    height: calc(100vh - 60px);
 
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-bottom: 20px;
+    background-image: linear-gradient(to right bottom, rgba(27, 20, 38, 0.7), rgba(27, 20, 38, 0.4));
+    backdrop-filter: blur(45px);
+}
 
+/* somente links "filhos diretos" */
+header .header-bottom nav > a {
+    padding: 30px 0;
+    color: white;
+    font-family: Inter;
+    font-weight: 400;
+    font-size: 15px;
+    text-align: center;
+    text-decoration: none;
+    border-bottom: 2px solid #F9AA01;
+}
 
-display: ;
-flex-direction: column;
-background-color: grey;
-border: 1px solid white;
-
-
-
-
-
-
-
+header .header-bottom nav > a:last-of-type {
+    border-bottom: none;
 }
 
 
+header .header-bottom nav .midias-sociais{
+/*gap e o espacamento entre os elementos, funciona em linha e tambem em coluna*/
+display: flex;
+justify-content: center;
+gap: 50px;
+
+}
+
+/* menu lateral direito - ícones */
 header .header-bottom .menu-usuarios {
-
-display: none;
-    
+    display: none;
 }
+
+
