--- a/css/style.css
+++ b/css/style.css
@@ -164,6 +164,9 @@ main{
     margin-top: 60px;
 }
 
+
+
+
 .banner {
 
     width: 100%;
@@ -177,6 +180,8 @@ main{
 
 .banner h1{
 
+    font-family: TitilliumWeb-Black ;
+    font-size: 40px;
+    display: ;
 
-    
 }
