--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,13 @@
-
 /* imports das fontes */
 
 /* TITILLIUM WEB */
 @font-face {
     font-family: TitilliumWeb-Black;
     src: url(../assets/fonts/Titillium_Web/TitilliumWeb-Black.ttf);
+}
+@font-face {
+    font-family: TitilliumWeb-Bold;
+    src: url(../assets/fonts/Titillium_Web/TitilliumWeb-Bold.ttf);
 }
 
 /* INTER */
@@ -27,17 +30,11 @@ body {
 .mostrar-menu {
     left: 0 !important;
 }
-.mostrar-Perfil{
-
+.mostrar-usuarios {
     right: 0 !important;
 }
-
-
-
-
 .layout-grid {
-   
-   /* border: 1px solid salmon;*/
+    /* border: 1px solid salmon; */
     width: 90%;
     height: 100%;
     margin: 0 auto;
@@ -92,10 +89,8 @@ header .header-bottom nav {
     padding-bottom: 20px;
     background-image: linear-gradient(to right bottom, rgba(27, 20, 38, 0.7), rgba(27, 20, 38, 0.4));
     backdrop-filter: blur(45px);
-    transition: left 0.4s ;
 
-
-
+    transition: left 0.4s;
 }
 
 /* somente links "filhos diretos" */
@@ -129,8 +124,7 @@ header .header-bottom nav .midias-sociais {
 */
 
 header .header-bottom nav .midias-sociais {
-    
-   /* border: 1px solid red;*/
+    /* border: 1px solid red; */
     display: flex;
     justify-content: center;
     /* gap é o espaçamento entre os elementos, funciona em linha e também em coluna. */
@@ -144,44 +138,202 @@ header .header-bottom .menu-usuarios {
     right: -19vw;
     width: 19vw;
     height: 170px;
-    transition: right 0.4s ;
+    background-image: linear-gradient(to right bottom, rgba(27, 20, 38, 0.7), rgba(27, 20, 38, 0.4));
+    backdrop-filter: blur(45px);
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+
+    transition: right 0.4s;
+}
+
+/* MAIN */
+main {
+    margin-top: 60px;
+}
+/* Banner */
+.banner {
+    width: 100%;
+    height: 606px;
+    padding: 40px 0;
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+
+    background-color: rebeccapurple;
+    background-image: url(../assets/images/fundo-banner-mobile.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: bottom;
+}
+
+.banner h1 {
+    font-family: TitilliumWeb-Black;
+    font-size: 40px;
+    text-shadow: 0 0 7px #FD4255;
+    
+}
+
+.banner .botao-sobre {
+    width: 171px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #F9AA01;
+    color: #1B1426;
+    text-decoration: none;
+    font-family: TitilliumWeb-Bold;
+    font-size: 24px;
+    border-radius: 8px;
+}
+
+
+
+.jogos{
+
+    width: 100%;
+    height: 590px;
+    padding: 69px 0;
+    background-color: #1B1426;
     
     
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    padding-bottom: 10px;
-    background-image: linear-gradient(to right bottom, rgba(27, 20, 38, 0.7), rgba(27, 20, 38, 0.4));
-    backdrop-filter: blur(45px);
-
 
 
 }
+
+
+.time-gamer{
+
+    width: 100%;
+    height: 1535px;
+    padding: 69px 0;
+    background-color: #F9AA01;
+    
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+
+    font-family: TitilliumWeb-Black;
+    color: black;
+    font-size: 15px;
+
+}
+
+
+/* layout para Tablets >= 768px */
+
+@media screen and (min-width: 768px) {
+
+
+}
+
+    /* Desktops >= 1200px */
+@media screen and (min-width: 1200px) {
+    .layout-grid {
+
+            width: 100%;
+            max-width:  1200px;
+            border: 3px dotted yellowgreen;
+    
+    }
+
+}
+    /* HEADER*/
+
+
+    header {
+
+        position: static;
+        height: 140px;
+
+    }
+
+    header .menu-hamburguer,
+    header .menu-pontinhos,
+    header .header-bottom nav .phone,
+    header .header-bottom nav .email,
+    header .header-bottom nav .midias .midias-sociais, {
+   
+    display: none;
+
+}
+
+header .header-bottom img.logo {
+    width: 200px;
+
+}
+
+header .header-bottom nav {
+
+    position: static;
+    width: 440px;
+    height: 50px;
+    flex-direction: row;
+    background-color: red;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    /*main*/
 
 main{
 
-    margin-top: 60px;
-}
-
-
-
-
-.banner {
-
-    width: 100%;
-    height: 606px;
-    background-image: url(../assets/images/valorant-pergunte-3-scaled\ 1.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: bottom;
+    margin-top: 0;
 
 }
 
-.banner h1{
 
-    font-family: TitilliumWeb-Black ;
-    font-size: 40px;
-    display: ;
 
-}
+
+
+
+
